Fix z-index of sidebar for landscape mobile views

--- a/styles/Sidebar.module.css
+++ b/styles/Sidebar.module.css
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 3;
   height: 100%;
   background-color: #fbefd5;
   overflow-x: hidden;
